--- a/StudentBio.html
+++ b/StudentBio.html
@@ -22,7 +22,7 @@
     <h2>Contact Info</h2>
     <ul>
         <li><strong>Email:</strong> hayden.voncannon@gmail.com</li>
-        <li><strong>Github:</strong> hvoncannon/haydenrepo</li>
+        <li><strong>Github:</strong> <a href="https://github.com/hvoncannon/haydenrepo"> hvoncannon/haydenrepo</a></li>
         <li><strong>Portofilo:</strong> coming soon</li>
     </ul>
 </body>
