--- a/StudentBio.html
+++ b/StudentBio.html
@@ -21,9 +21,9 @@
 
     <h2>Contact Info</h2>
     <ul>
-        <li><strong>Email:</strong> hayden.voncannon@gmail.com</li>
+        <li><strong>Email:</strong> <a href="mailto:hayden.voncannon@gmail.com">hayden.voncannon@gmail.com</a></li>
         <li><strong>Github:</strong> <a href="https://github.com/hvoncannon/haydenrepo"> hvoncannon/haydenrepo</a></li>
-        <li><strong>Portofilo:</strong> coming soon</li>
+        <li><strong>Portofilo:</strong> <a href="">coming soon</a></li>
     </ul>
 </body>
 </html>
