--- a/StudentBio.html
+++ b/StudentBio.html
@@ -18,6 +18,9 @@
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Testing adding something.
+
+       <strong>Ayo I am adding a line here brah.</strong>
+       
     </P>
 
     <h2>Contact Info</h2>
