guess what I am doing again

--- a/StudentBio.html
+++ b/StudentBio.html
@@ -21,6 +21,7 @@
 
        <strong>Ayo I am adding a line here brah.</strong>
        Doing the same thing right now.....
+       Adding yet another line to this file!!!!
     </P>
 
     <h2>Contact Info</h2>
