adding css file

--- a/StudentBio.html
+++ b/StudentBio.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
+    <div class="container">
     <h1>Student Bio</h1>
 
     <h2>Hayden VonCannon</h2>
 
-    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Talking_Heads_band1.jpg"/>
-    <P>My name is Hayden. I am stoked to be in this class. The rest of this will be lorem ipsum.
+    <img class="bio-image" src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Talking_Heads_band1.jpg"/>
+    <P class="main-bio">My name is Hayden. I am stoked to be in this class. The rest of this will be lorem ipsum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
@@ -30,12 +33,14 @@
        asdfafsdsadfasdf
         addddd number ten
     </P>
-
+    </div>
     <h2>Contact Info</h2>
+    <p class="contact-info">
     <ul>
         <li><strong>Email:</strong> <a href="mailto:hayden.voncannon@gmail.com">hayden.voncannon@gmail.com</a></li>
         <li><strong>Github:</strong> <a href="https://github.com/hvoncannon/haydenrepo"> hvoncannon/haydenrepo</a></li>
         <li><strong>Portofilo:</strong> <a href="">coming soon</a></li>
     </ul>
+    </p>
 </body>
 </html>
