--- a/StudentBio.html
+++ b/StudentBio.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-    <h1>Student Bio</h1>
+   <header><h1>Student Bio</h1></header>
 
     <h2>Hayden VonCannon</h2>
 
